--- a/sncp-service/sncp-passport/pom.xml
+++ b/sncp-service/sncp-passport/pom.xml
@@ -16,4 +16,13 @@
 		<module>passport-dubbo</module>
 	</modules>
 	
+	<dependencies>
+		<dependency>
+			<groupId>com.woniu.sncp</groupId>
+			<artifactId>sncp-exception</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+	</dependencies>
+	
+	
 </project>
