--- a/sncp-service/pom.xml
+++ b/sncp-service/pom.xml
@@ -5,13 +5,13 @@
 	<artifactId>sncp-service</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
-	
+
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.3.3.RELEASE</version>
 	</parent>
-	
+
 	<properties>
 		<jdk.version>1.8</jdk.version>
 		<commons.encoding>UTF-8</commons.encoding>
@@ -19,13 +19,25 @@
 		<dozer.version>5.5.1</dozer.version>
 		<zkclient.version>0.2</zkclient.version>
 		<junit.version>4.12</junit.version>
+		<httpclient.version>4.5.1</httpclient.version>
 	</properties>
 
 	<modules>
 		<module>sncp-fcm</module>
 		<module>sncp-passport</module>
+		<module>sncp-exception</module>
 	</modules>
-	
+
+	<dependencies>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>${junit.version}</version>
+			<scope>test</scope>
+		</dependency>
+		
+	</dependencies>
+
 	<build>
 		<plugins>
 			<plugin>
@@ -56,6 +68,6 @@
 			</plugin>
 		</plugins>
 	</build>
-	
-	
+
+
 </project>
