--- a/sncp-service/sncp-exception/pom.xml
+++ b/sncp-service/sncp-exception/pom.xml
@@ -1,21 +1,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>fcm-api</artifactId>
+	<artifactId>sncp-exception</artifactId>
 	<packaging>jar</packaging>
-
+	
 	<parent>
 		<groupId>com.woniu.sncp</groupId>
-		<artifactId>sncp-fcm</artifactId>
+		<artifactId>sncp-service</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-
-	<dependencies>
-		<dependency>
-			<groupId>com.woniu.sncp</groupId>
-			<artifactId>sncp-exception</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-	</dependencies>
-
+	
 </project>
