修改报名services改为service

--- a/sncp-service/sncp-fcm/fcm-dubbo/src/main/resources/application-dev.properties
+++ b/sncp-service/sncp-fcm/fcm-dubbo/src/main/resources/application-dev.properties
@@ -2,4 +2,9 @@ dubbo.zookeeper=zookeeper://192.168.1.128:2181
 
 #mongodb
 mongodb.ip=10.17.0.4
-mongodb.collectionName=test
+mongodb.port=27017
+mongodb.collectionName=SN_FCM
+mongodb.userName=
+mongodb.userPwd=
+mongodb.connection.timeout=1000
+mongodb.connectionsPerHost=5
