--- a/sncp-service/sncp-fcm/fcm-dubbo/src/main/resources/application-prod.properties
+++ b/sncp-service/sncp-fcm/fcm-dubbo/src/main/resources/application-prod.properties
@@ -1,1 +1,10 @@
 dubbo.zookeeper=zookeeper://192.168.95.120:2181,192.168.95.135:2181,192.168.95.235:2181
+
+#mongodb
+mongodb.ip=
+mongodb.port=27017
+mongodb.collectionName=SN_FCM
+mongodb.userName=
+mongodb.userPwd=
+mongodb.connection.timeout=1000
+mongodb.connectionsPerHost=5
