修改日志配置

--- a/sncp-service/sncp-passport/passport-dubbo/src/main/resources/application-prod.properties
+++ b/sncp-service/sncp-passport/passport-dubbo/src/main/resources/application-prod.properties
@@ -5,4 +5,6 @@ ocp.appid=ms_user
 ocp.pwd=Qwer!@EUIOPfrtgyuuijt
 ocp.passport.server=http://passport.ocp.woniu.com
 
+logging.path=/usr/sncp/logs/micro/passport/${server.port}
+
 dubbo.zookeeper=zookeeper://192.168.95.120:2181,192.168.95.135:2181,192.168.95.235:2181
