--- a/sncp-service/sncp-passport/passport-dubbo/src/main/resources/application-dev.properties
+++ b/sncp-service/sncp-passport/passport-dubbo/src/main/resources/application-dev.properties
@@ -5,4 +5,6 @@ ocp.appid=test_app
 ocp.pwd=111111
 ocp.passport.server=http://192.168.1.128:12003
 
+logging.path=/usr/sncp/logs/micro/passport/${server.port}
+
 dubbo.zookeeper=zookeeper://192.168.1.128:2181
