--- a/sncp-service/sncp-fcm/fcm-dubbo/src/main/resources/application-prod.properties
+++ b/sncp-service/sncp-fcm/fcm-dubbo/src/main/resources/application-prod.properties
@@ -8,3 +8,6 @@ mongodb.userName=
 mongodb.userPwd=
 mongodb.connection.timeout=1000
 mongodb.connectionsPerHost=5
+
+#log back parent dir
+logging.path=/usr/sncp/logs/micro/fcm
