--- a/sncp-service/sncp-passport/passport-dubbo/pom.xml
+++ b/sncp-service/sncp-passport/passport-dubbo/pom.xml
@@ -3,13 +3,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>passport-dubbo</artifactId>
 	<packaging>jar</packaging>
-	
+
 	<parent>
 		<groupId>com.woniu.sncp</groupId>
 		<artifactId>sncp-passport</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>com.woniu.sncp</groupId>
@@ -19,6 +19,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -52,7 +56,7 @@
 			<version>${httpclient.version}</version>
 		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
