--- a/sncp-service/sncp-fcm/fcm-api/pom.xml
+++ b/sncp-service/sncp-fcm/fcm-api/pom.xml
@@ -17,5 +17,15 @@
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
+	
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+	    	</plugin>  
+		</plugins>
+	</build>
+	   
 
 </project>
