--- a/sncp-service/sncp-passport/passport-api/pom.xml
+++ b/sncp-service/sncp-passport/passport-api/pom.xml
@@ -3,12 +3,20 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>passport-api</artifactId>
 	<packaging>jar</packaging>
-	
+
 	<parent>
 		<groupId>com.woniu.sncp</groupId>
 		<artifactId>sncp-passport</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
