添加告警服务，支持主备mongos

--- a/sncp-service/pom.xml
+++ b/sncp-service/pom.xml
@@ -26,6 +26,7 @@
 	<modules>
 		<module>sncp-fcm</module>
 		<module>sncp-passport</module>
+		<module>sncp-alarm</module>
 		<module>sncp-exception</module>
 	</modules>
 
