--- a/sncp-service/sncp-fcm/fcm-dubbo/src/main/resources/application.properties
+++ b/sncp-service/sncp-fcm/fcm-dubbo/src/main/resources/application.properties
@@ -5,3 +5,6 @@ dubbo.port=30003
 spring.profiles.active=dev
 
 management.health.mongo.enabled=true
+
+#\u544a\u8b66\u4e1a\u52a1\u7f16\u7801
+monitor.src=
