--- a/sncp-service/sncp-alarm/alarm-dubbo/pom.xml
+++ b/sncp-service/sncp-alarm/alarm-dubbo/pom.xml
@@ -1,34 +1,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	
 	<modelVersion>4.0.0</modelVersion>
-	<artifactId>fcm-dubbo</artifactId>
+	<artifactId>alarm-dubbo</artifactId>
 	<packaging>jar</packaging>
 
 	<parent>
 		<groupId>com.woniu.sncp</groupId>
-		<artifactId>sncp-fcm</artifactId>
+		<artifactId>sncp-alarm</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-
+ 
 	<dependencies>
 		<dependency>
 			<groupId>com.woniu.sncp</groupId>
-			<artifactId>passport-api</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.woniu.sncp</groupId>
-			<artifactId>fcm-api</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.woniu.sncp</groupId>
 			<artifactId>alarm-api</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>com.woniu.sncp</groupId>
-			<artifactId>fcm-mongo</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
@@ -64,6 +50,10 @@
 			<groupId>com.101tec</groupId>
 			<artifactId>zkclient</artifactId>
 			<version>${zkclient.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
 		</dependency>
 	</dependencies>
 
