--- a/sncp-service/sncp-fcm/pom.xml
+++ b/sncp-service/sncp-fcm/pom.xml
@@ -14,6 +14,7 @@
 		<module>fcm-api</module>
 		<module>fcm-mongo</module>
 		<module>fcm-dubbo</module>
+		<module>fcm-schedule</module>
 	</modules>
 		
 	<dependencies>
