--- a/sncp-service/sncp-fcm/fcm-dubbo/src/main/resources/application-dev.properties
+++ b/sncp-service/sncp-fcm/fcm-dubbo/src/main/resources/application-dev.properties
@@ -1,9 +1,9 @@
 dubbo.zookeeper=zookeeper://192.168.1.128:2181
 
 #mongodb
-mongodb.url=10.103.4.133:1000,10.103.4.133:2000
+mongodb.url=10.103.4.137:1000,10.103.4.138:1000
 mongodb.collectionName=SN_FCM
 mongodb.userName=fcm_user
-mongodb.userPwd=caifdaan^(!)(123VAD
+mongodb.userPwd=caifdaan@!)(123VAD
 mongodb.connection.timeout=1000
 mongodb.connectionsPerHost=5
