--- a/sncp-service/sncp-fcm/fcm-dubbo/src/main/resources/application-dev.properties
+++ b/sncp-service/sncp-fcm/fcm-dubbo/src/main/resources/application-dev.properties
@@ -4,6 +4,6 @@ dubbo.zookeeper=zookeeper://192.168.1.128:2181
 mongodb.url=10.103.4.137:1000,10.103.4.138:1000
 mongodb.collectionName=SN_FCM
 mongodb.userName=fcm_user
-mongodb.userPwd=caifdaan@!)(123VAD
+mongodb.userPwd=caifdaan^(!)(123VAD
 mongodb.connection.timeout=1000
 mongodb.connectionsPerHost=5
