--- a/sncp-service/sncp-passport/passport-dubbo/src/main/resources/application-prod.properties
+++ b/sncp-service/sncp-passport/passport-dubbo/src/main/resources/application-prod.properties
@@ -8,3 +8,15 @@ ocp.passport.server=http://passport.ocp.woniu.com
 logging.path=/usr/sncp/logs/micro/passport/${server.port}
 
 dubbo.zookeeper=zookeeper://192.168.95.120:2181,192.168.95.135:2181,192.168.95.235:2181
+
+#passport\u7cfb\u7edf\u670d\u52a1\u5217\u8868
+passports.ribbon.listOfServers=passport.ocp.woniu.com,1.passport.ocp.woniu.com:12003,2.passport.ocp.woniu.com:12003,3.passport.ocp.woniu.com:12003
+passports.ribbon.ConnectTimeout=1000
+passports.ribbon.ReadTimeout=2000
+passports.ribbon.MaxAutoRetries=1
+passports.ribbon.MaxAutoRetriesNextServer=1
+passports.ribbon.OkToRetryOnAllOperations=true  
+passports.ribbon.ServerListRefreshInterval=2000
+passports.ribbon.EnablePrimeConnections=true
+
+ribbon.eureka.enabled=false
