添加线上mongodb,告警等配置信息

--- a/sncp-service/sncp-fcm/fcm-dubbo/src/main/resources/application.properties
+++ b/sncp-service/sncp-fcm/fcm-dubbo/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.profiles.active=dev
 management.health.mongo.enabled=true
 
 #\u544a\u8b66\u4e1a\u52a1\u7f16\u7801
-monitor.src=
+monitor.src=10000100024
