--- a/sncp-service/pom.xml
+++ b/sncp-service/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.3.3.RELEASE</version>
+		<version>1.3.5.RELEASE</version>
 	</parent>
 
 	<properties>
@@ -21,6 +21,7 @@
 		<zkclient.version>0.2</zkclient.version>
 		<junit.version>4.12</junit.version>
 		<httpclient.version>4.5.1</httpclient.version>
+		<spring.cluod.version>Brixton.RELEASE</spring.cluod.version>
 	</properties>
 
 	<modules>
