日志目录提取到配置文件中

--- a/sncp-service/sncp-alarm/alarm-dubbo/src/main/resources/application.properties
+++ b/sncp-service/sncp-alarm/alarm-dubbo/src/main/resources/application.properties
@@ -6,3 +6,6 @@ dubbo.port=20033
 
 http.connect.timeout=3000
 http.read.timeout=3000
+
+#\u65e5\u5fd7\u76ee\u5f55
+logging.path=/usr/sncp/logs/micro
