修改日志配置文件

--- a/sncp-service/sncp-fcm/fcm-schedule/src/main/resources/application-prod.properties
+++ b/sncp-service/sncp-fcm/fcm-schedule/src/main/resources/application-prod.properties
@@ -1,13 +1,13 @@
 dubbo.zookeeper=zookeeper://192.168.95.120:2181,192.168.95.135:2181,192.168.95.235:2181
 
 #mongodb
-mongodb.ip=
-mongodb.port=27017
+mongodb.url=192.168.95.35:3000
 mongodb.collectionName=SN_FCM
-mongodb.userName=
-mongodb.userPwd=
+mongodb.userName=fcm_user
+mongodb.userPwd=caifdaan^(!)(123VAD
 mongodb.connection.timeout=1000
-mongodb.connectionsPerHost=5
+mongodb.connectionsPerHost=10
+
 
 #log back parent dir
 logging.path=/usr/sncp/logs/micro/fcm
