--- a/sncp-service/sncp-passport/passport-dubbo/src/main/resources/application-dev.properties
+++ b/sncp-service/sncp-passport/passport-dubbo/src/main/resources/application-dev.properties
@@ -5,7 +5,7 @@ ocp.appid=test_app
 ocp.pwd=111111
 ocp.passport.server=http://passports
 
-logging.path=/usr/sncp/logs/micro/passport/${server.port}
+logging.path=/usr/sncp/logs/micro/passport
 
 dubbo.zookeeper=zookeeper://10.13.0.152:2181
 
