--- a/sncp-service/pom.xml
+++ b/sncp-service/pom.xml
@@ -1,9 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.woniu.sncp</groupId>
 	<artifactId>sncp-service</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>pom</packaging>
 
 	<parent>
@@ -45,7 +44,7 @@
         <url>scm:git:ssh://git@3.com/woniu-microservices.git</url>
         <connection>scm:git:ssh://git@3.com/woniu-microservices.git</connection>
         <developerConnection>scm:git:ssh://git@3.com/woniu-microservices.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>sncp-service-1.0.0</tag>
     </scm>
 
 	<build>
