--- a/sncp-service/sncp-fcm/fcm-dubbo/pom.xml
+++ b/sncp-service/sncp-fcm/fcm-dubbo/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.woniu.sncp</groupId>
 		<artifactId>sncp-fcm</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.1-SNAPSHOT</version>
 	</parent>
 
 	<dependencies>
