--- a/sncp-service/sncp-passport/pom.xml
+++ b/sncp-service/sncp-passport/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.woniu.sncp</groupId>
 		<artifactId>sncp-service</artifactId>
-		<version>1.0.0</version>
+		<version>1.0.1-SNAPSHOT</version>
 	</parent>
 
 	<modules>
