--- a/sncp-cbss/cbss.core/pom.xml
+++ b/sncp-cbss/cbss.core/pom.xml
@@ -1,15 +1,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-
-	<groupId>com.woniu.cbss</groupId>
-	<artifactId>cbss.core.parent</artifactId>
-	<version>0.0.1</version>
+	<artifactId>cbss-core</artifactId>
 	<packaging>pom</packaging>
 
 	<name>${project.artifactId}</name>
 	<url>http://maven.apache.org</url>
+	
+	<parent>
+		<groupId>com.woniu.cbss</groupId>
+		<artifactId>cbss.core.parent</artifactId>
+		<version>0.0.1</version>
+	</parent>
+
 	<modules>
+		<module>cbss.parent</module>
 		<module>cbss.util/trunk</module>
 		<module>cbss.trace/trunk</module>
 		<module>cbss.validation/trunk</module>
