boot 服务监控台域名:console.micro.woniu.com

--- a/sncp-cbss/cbss.business/version.1.0.0/api.fcm/trunk/src/main/resources/application-prod.properties
+++ b/sncp-cbss/cbss.business/version.1.0.0/api.fcm/trunk/src/main/resources/application-prod.properties
@@ -17,7 +17,7 @@ security.user.name=cbssapi
 security.user.password=ID)!DFASDPOI!@#
 
 management.context-path=/management
-spring.boot.admin.url=http://192.168.95.143:10000/
+spring.boot.admin.url=http://console.micro.woniu.com/
 
 management.health.redis.enabled=false
 
