--- a/sncp-cbss/cbss.business/version.1.0.0/api.parent/pom.xml
+++ b/sncp-cbss/cbss.business/version.1.0.0/api.parent/pom.xml
@@ -1054,4 +1054,17 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+	<distributionManagement>
+		<snapshotRepository>
+			<id>snapshots</id>
+			<name>Snapshots</name>
+			<url>${maven.repositories.url}/content/repositories/snapshots</url>
+			<uniqueVersion>false</uniqueVersion>
+		</snapshotRepository>
+		<repository>
+			<id>releases</id>
+			<name>Releases</name>
+			<url>${maven.repositories.url}/content/repositories/releases</url>
+		</repository>
+	</distributionManagement>
 </project>
