--- a/sncp-cbss/cbss.business/version.1.0.0/api.fcm/trunk/pom.xml
+++ b/sncp-cbss/cbss.business/version.1.0.0/api.fcm/trunk/pom.xml
@@ -74,6 +74,12 @@
 		</dependency>
 		
 		<dependency>
+		  <groupId>javax.servlet</groupId>
+		  <artifactId>servlet-api</artifactId>
+		  <version>2.4</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
