--- a/sncp-cbss/cbss.business/version.1.0.0/api.fcm/trunk/src/main/resources/application.properties
+++ b/sncp-cbss/cbss.business/version.1.0.0/api.fcm/trunk/src/main/resources/application.properties
@@ -40,11 +40,13 @@ management.health.redis.enabled=false
 
 cbss.api.errorcode.bis.basename=errorcode_zh_CN
 
+
 cbss.api.redis.cluster.nodes=10.106.0.199:7000,10.106.0.199:7001,10.106.0.199:7002
 cbss.api.redis.cluster.timeout=30000
 cbss.api.redis.cluster.maxRedirects=8
 cbss.api.redis.cluster.maxTotal=50
 
+dubbo.zookeeper=zookeeper://192.168.1.128:2181
 cbss.api.zookeeper.conf.nodes = 192.168.1.128:2181
 cbss.api.zookeeper.conf.maxRetrie = 3
 cbss.api.zookeeper.conf.baseSleepTimeMS = 3000
