--- a/sncp-cbss/cbss.business/version.1.0.0/api.fcm/trunk/src/main/resources/application-prod.properties
+++ b/sncp-cbss/cbss.business/version.1.0.0/api.fcm/trunk/src/main/resources/application-prod.properties
@@ -30,7 +30,7 @@ cbss.api.redis.cluster.timeout=30000
 cbss.api.redis.cluster.max-redirects=8
 cbss.api.redis.cluster.maxTotal=50
 
-dubbo.zookeeper=zookeeper://192.168.95.120:2181,192.168.95.135:2181,192.168.95.235:2181
+dubbo.zookeeper=zookeeper://192.168.95.120:2181?backup=192.168.95.135:2181,192.168.95.235:2181
 cbss.api.zookeeper.conf.nodes = 192.168.95.120:2181,192.168.95.135:2181,192.168.95.235:2181
 cbss.api.zookeeper.conf.maxRetrie = 3
 cbss.api.zookeeper.conf.baseSleepTimeMS = 3000
