--- a/sncp-service/sncp-fcm/fcm-dubbo/src/main/resources/application-dev.properties
+++ b/sncp-service/sncp-fcm/fcm-dubbo/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-dubbo.zookeeper=zookeeper://192.168.1.128:2181
+dubbo.zookeeper=192.168.1.128:2181
 
 #mongodb
 mongodb.url=10.103.4.137:1000,10.103.4.138:1000
