修改zk集群配置

--- a/sncp-service/sncp-passport/passport-dubbo/src/main/resources/application-test.properties
+++ b/sncp-service/sncp-passport/passport-dubbo/src/main/resources/application-test.properties
@@ -7,7 +7,7 @@ ocp.passport.server=http://passports
 
 logging.path=/usr/sncp/logs/micro/passport
 
-dubbo.zookeeper=zookeeper://192.168.1.128:2181
+dubbo.zookeeper=192.168.1.128:2181
 
 # Initial list of servers, can be changed via Archaius dynamic property at runtime
 passports.ribbon.listOfServers=192.168.1.128:12003,10.13.0.184:12003
