--- a/sncp-service/sncp-cloud-config/pom.xml
+++ b/sncp-service/sncp-cloud-config/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>com.woniu.sncp</groupId>
 		<artifactId>sncp-service</artifactId>
-		<version>1.0.1</version>
+		<version>1.0.2-SNAPSHOT</version>
 	</parent>
 	
 	<dependencyManagement>
