--- a/sncp-service/sncp-alarm/alarm-dubbo/src/main/resources/application-prod.properties
+++ b/sncp-service/sncp-alarm/alarm-dubbo/src/main/resources/application-prod.properties
@@ -1,5 +1,5 @@
 #dubbo zk \u5730\u5740
-dubbo.zookeeper=192.168.95.120:2181,192.168.95.135:2181,192.168.95.235:2181
+dubbo.zookeeper=zookeeper://192.168.95.120:2181?backup=192.168.95.135:2181,192.168.95.235:2181
 
 #\u76d1\u63a7\u5730\u5740
 alarm.url=http://monitor.yunwei.woniu.com/api/push/
