--- a/sncp-service/sncp-alarm/alarm-dubbo/pom.xml
+++ b/sncp-service/sncp-alarm/alarm-dubbo/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>com.woniu.sncp</groupId>
 		<artifactId>sncp-alarm</artifactId>
-		<version>1.0.2-SNAPSHOT</version>
+		<version>1.0.2</version>
 	</parent>
  
 	<dependencies>
