--- a/sncp-service/sncp-passport/passport-dubbo/src/main/resources/application-prod.properties
+++ b/sncp-service/sncp-passport/passport-dubbo/src/main/resources/application-prod.properties
@@ -9,6 +9,8 @@ logging.path=/usr/sncp/logs/micro/passport
 
 dubbo.zookeeper=zookeeper://192.168.95.120:2181?backup=192.168.95.135:2181,192.168.95.235:2181
 
+dubbo.port=20011
+
 #passport\u7cfb\u7edf\u670d\u52a1\u5217\u8868
 passports.ribbon.listOfServers=passport.ocp.woniu.com,1.passport.ocp.woniu.com:12003,2.passport.ocp.woniu.com:12003,3.passport.ocp.woniu.com:12003
 passports.ribbon.ConnectTimeout=1000
