--- a/sncp-service/sncp-passport/passport-dubbo/src/main/resources/application-test.properties
+++ b/sncp-service/sncp-passport/passport-dubbo/src/main/resources/application-test.properties
@@ -9,6 +9,8 @@ logging.path=/usr/sncp/logs/micro/passport
 
 dubbo.zookeeper=192.168.1.128:2181
 
+dubbo.port=20011
+
 # Initial list of servers, can be changed via Archaius dynamic property at runtime
 passports.ribbon.listOfServers=192.168.1.128:12003,10.13.0.184:12003
 # Connect timeout used by Apache HttpClient
