修改IP获取snail-ip配置

--- a/sncp-cbss/cbss.business/version.1.0.0/api.fcm/trunk/src/main/resources/application-prod.properties
+++ b/sncp-cbss/cbss.business/version.1.0.0/api.fcm/trunk/src/main/resources/application-prod.properties
@@ -37,6 +37,8 @@ cbss.api.zookeeper.conf.baseSleepTimeMS = 3000
 cbss.api.zookeeper.conf.nameSpace = cbss/api
 cbss.api.zookeeper.conf.threadPoolSize =5
 
+cbss.api.ip.conf.open_Other_Attract_IP=Snail-Ip
+
 cbss.api.forbiLog.conf.forbiMethodInfos=processSubmit,mergeFranchiseeInfo,mobileRegisterPassport,registerPassport,registerPassport,regPassportBind,regPassportBind,validatePassport,queryEps,queryUserEps,updateEps,updateEpsByChType,updateEpsByUserId,updateEpsByUserIdAndChType,checkPassport,sendMobileSmsCode,sendMobileCode,mobileCodeAuth,mobileAuth,mobileRegisterPassport,registerPassport,sendMobileActiveKey,sendAppointmentSms,mobileCodeAuth,mobileAuth,imprestPropCard,registerPassport,checkPassport,exeProcWithJson,registerPassport,regPassport,regPassportBind,sdoMobileRegisterPassport,sdoRegisterPassport,checkPassport,register.json,register_check.json,vapi,changepassword,resetpasswordemail,resetpasswordsms,sendmobilecode,useCard,checkPassportOther,saveCompleteInfo,checkPassport
 cbss.api.forbiLog.conf.forbiAttrInfos=password,commitpassword,cipher,secAns,secQes,answner,commitnewpassword
 cbss.api.forbiLog.conf.forbiKeys=org.springframework,encodingFilter.FILTERED
