--- a/sncp-cbss/cbss.business/version.1.0.0/api.init/trunk/pom.xml
+++ b/sncp-cbss/cbss.business/version.1.0.0/api.init/trunk/pom.xml
@@ -32,6 +32,12 @@
 		<dependency>
 			<groupId>de.codecentric</groupId>
 			<artifactId>spring-boot-admin-server</artifactId>
+			<exclusions>
+				<exclusion>
+					<artifactId>httpclient</artifactId>
+					<groupId>org.apache.httpcomponents</groupId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>de.codecentric</groupId>
@@ -55,7 +61,15 @@
 			<groupId>com.woniu.cbss</groupId>
 			<artifactId>cbss.core.errorcode</artifactId>
 		</dependency>
-		
+
+		<dependency>
+			<groupId>com.woniu.cbss</groupId>
+			<artifactId>cbss.core.call</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.woniu.cbss</groupId>
+			<artifactId>cbss.core.trace</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>javax.validation</groupId>
