修复公网配置文件远程ocp-passport连接配置

--- a/sncp-service/sncp-passport/passport-dubbo/src/main/resources/application-prod.properties
+++ b/sncp-service/sncp-passport/passport-dubbo/src/main/resources/application-prod.properties
@@ -3,7 +3,7 @@ ocp.connectTimeout=2000
 ocp.readTimeout=2000
 ocp.appid=ms_user
 ocp.pwd=Qwer!@EUIOPfrtgyuuijt
-ocp.passport.server=http://passport.ocp.woniu.com
+ocp.passport.server=http://passports
 
 logging.path=/usr/sncp/logs/micro/passport
 
