--- a/sncp-service/sncp-fcm/fcm-dubbo/src/main/resources/application.properties
+++ b/sncp-service/sncp-fcm/fcm-dubbo/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.profiles.active=dev
 management.health.mongo.enabled=true
 
 #\u544a\u8b66\u4e1a\u52a1\u7f16\u7801
-monitor.src=10000100024
+alarm.src=10000100024
 
 #\u65e5\u5fd7\u76ee\u5f55
 logging.path=/usr/sncp/logs/micro
