--- a/sncp-cbss/cbss.business/version.1.0.0/api.fcm/trunk/src/main/resources/application-prod.properties
+++ b/sncp-cbss/cbss.business/version.1.0.0/api.fcm/trunk/src/main/resources/application-prod.properties
@@ -6,6 +6,14 @@ info.build.name=@project.name@
 info.build.description=@project.description@
 info.build.version=@project.version@
 
+server.tomcat.compression=on
+server.tomcat.compressableMimeTypes=application/json
+
+server.compression.enabled=true
+server.compression.mimeTypes=application/json
+server.compression.excludedUserAgents=
+server.compression.minResponseSize=2048
+
 server.tomcat.maxThreads=1000
 server.tomcat.minSpareThreads=500
 server.tomcat.backgroundProcessorDelay=5
@@ -32,7 +40,11 @@ management.health.redis.enabled=false
 
 cbss.api.errorcode.bis.basename=errorcode_zh_CN
 
-
+cbss.api.alert.http.conf.alertUrl=http://monitor.yunwei.woniu.com:81/api/push/
+cbss.api.alert.http.conf.alertServiceType=
+cbss.api.alert.http.conf.alertMaxcycle=3
+cbss.api.alert.http.conf.alertTimeout=1000
+cbss.api.alert.http.conf.alertContent=%S,%S,%S,%S,%S
 
 cbss.api.redis.cluster.nodes=192.168.94.11:7001,192.168.94.12:7002,192.168.94.13:7003
 cbss.api.redis.cluster.timeout=30000
@@ -48,9 +60,9 @@ cbss.api.zookeeper.conf.threadPoolSize =5
 
 cbss.api.ip.conf.openOtherAttractIP=x-forwarded-for
 
-cbss.api.appliction.heart.conf.metricUrl=http://monitor.yunwei.woniu.com:81/api/push_monitor/
-cbss.api.appliction.heart.conf.metricType=heart.@pom.artifactId@
-cbss.api.appliction.heart.conf.tags=desc=@project.description@,version=@project.version@
+cbss.api.application.heart.conf.metricUrl=http://monitor.yunwei.woniu.com:81/api/push_monitor/
+cbss.api.application.heart.conf.metricType=heart.@pom.artifactId@
+cbss.api.application.heart.conf.tags=desc=@project.description@,version=@project.version@
 
 cbss.api.forbiLog.conf.forbiMethodInfos=processSubmit,mergeFranchiseeInfo,mobileRegisterPassport,registerPassport,registerPassport,regPassportBind,regPassportBind,validatePassport,queryEps,queryUserEps,updateEps,updateEpsByChType,updateEpsByUserId,updateEpsByUserIdAndChType,checkPassport,sendMobileSmsCode,sendMobileCode,mobileCodeAuth,mobileAuth,mobileRegisterPassport,registerPassport,sendMobileActiveKey,sendAppointmentSms,mobileCodeAuth,mobileAuth,imprestPropCard,registerPassport,checkPassport,exeProcWithJson,registerPassport,regPassport,regPassportBind,sdoMobileRegisterPassport,sdoRegisterPassport,checkPassport,register.json,register_check.json,vapi,changepassword,resetpasswordemail,resetpasswordsms,sendmobilecode,useCard,checkPassportOther,saveCompleteInfo,checkPassport
 cbss.api.forbiLog.conf.forbiAttrInfos=password,commitpassword,cipher,secAns,secQes,answner,commitnewpassword
