--- a/sncp-service/pom.xml
+++ b/sncp-service/pom.xml
@@ -21,6 +21,8 @@
 		<junit.version>4.12</junit.version>
 		<httpclient.version>4.5.1</httpclient.version>
 		<spring.cluod.version>Brixton.RELEASE</spring.cluod.version>
+		<spring.boot.admin.client.version>1.3.2</spring.boot.admin.client.version>
+		<woniu.cbss.init.version>0.0.1</woniu.cbss.init.version>
 	</properties>
 
 	<modules>
