--- a/sncp-service/sncp-passport/passport-dubbo/src/main/resources/bootstrap-dev.yml
+++ b/sncp-service/sncp-passport/passport-dubbo/src/main/resources/bootstrap-dev.yml
@@ -63,7 +63,7 @@ cbss:
       heart: 
         conf: 
           metricUrl: http://124.202.142.136:81/api/push_monitor/
-          metricType: heart.passport-dubbo
+          metricType: sncp.mirco.heart
           tags: desc=passport-dubbo,version=1.0.0
 
 security: 
