身份证姓名验证服务

--- a/sncp-service/sncp-nciic/nciic-dubbo/src/main/resources/application.properties
+++ b/sncp-service/sncp-nciic/nciic-dubbo/src/main/resources/application.properties
@@ -17,3 +17,5 @@ nciic.maxInDay=5000
 nciic.redisNodes=10.106.0.199:7000,10.106.0.199:7001,10.106.0.199:7002
 nciic.redisTimeout=30000
 nciic.redisMaxRedirects=8
+
+oracle.druidconf={"url":"jdbc:oracle:thin:@10.17.0.200:1521:center","username":"sn_account","password":"o_account_xn"}
