提交日志文件查看

--- a/sncp-cbss/cbss.business/version.1.0.0/api.fcm/trunk/src/main/resources/application-prod.properties
+++ b/sncp-cbss/cbss.business/version.1.0.0/api.fcm/trunk/src/main/resources/application-prod.properties
@@ -24,6 +24,8 @@ accesslog.directory=/usr/sncp/logs/micro/cbssapi/${server.port}/accesslog/
 server.context-path=/
 server.port=8888
 
+logging.path=/usr/sncp/logs/micro/cbssapi
+
 endpoints.jmx.domain=@pom.artifactId@
 spring.application.name=@pom.artifactId@
 
