加入到 spring boot admin和 增加 心跳

--- a/sncp-service/sncp-fcm/fcm-dubbo/pom.xml
+++ b/sncp-service/sncp-fcm/fcm-dubbo/pom.xml
@@ -64,6 +64,23 @@
 			<artifactId>zkclient</artifactId>
 			<version>${zkclient.version}</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+			<version>${spring.boot.admin.client.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.woniu.cbss</groupId>
+			<artifactId>cbss.api.init</artifactId>
+			<version>${woniu.cbss.init.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.jolokia</groupId>
+			<artifactId>jolokia-core</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
