--- a/sncp-service/sncp-fcm/fcm-dubbo/src/main/resources/application-dev.properties
+++ b/sncp-service/sncp-fcm/fcm-dubbo/src/main/resources/application-dev.properties
@@ -7,3 +7,7 @@ mongodb.userName=fcm_user
 mongodb.userPwd=caifdaan^(!)(123VAD
 mongodb.connection.timeout=1000
 mongodb.connectionsPerHost=5
+
+#metrics
+cbss.api.application.heart.conf.metricUrl=http://124.202.142.136:81/api/push_monitor/
+spring.boot.admin.url=http://10.103.4.137:2000
