--- a/sncp-service/sncp-alarm/alarm-dubbo/pom.xml
+++ b/sncp-service/sncp-alarm/alarm-dubbo/pom.xml
@@ -54,6 +54,23 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+			<version>${spring.boot.admin.client.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.woniu.cbss</groupId>
+			<artifactId>cbss.api.init</artifactId>
+			<version>${woniu.cbss.init.version}</version>
+		</dependency>
+		
+		<dependency>
+			<groupId>org.jolokia</groupId>
+			<artifactId>jolokia-core</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
