--- a/sncp-service/sncp-alarm/alarm-dubbo/src/main/resources/application-dev.properties
+++ b/sncp-service/sncp-alarm/alarm-dubbo/src/main/resources/application-dev.properties
@@ -3,3 +3,7 @@ dubbo.zookeeper=192.168.1.128:2181
 
 #\u76d1\u63a7\u5730\u5740
 alarm.url=http://124.202.142.136:81/api/push/
+
+#metrics
+cbss.api.application.heart.conf.metricUrl=http://124.202.142.136:81/api/push_monitor/
+spring.boot.admin.url=http://10.103.4.137:2000
