--- a/sncp-service/sncp-fcm/fcm-dubbo/src/main/resources/application.properties
+++ b/sncp-service/sncp-fcm/fcm-dubbo/src/main/resources/application.properties
@@ -11,3 +11,31 @@ alarm.src=10000100024
 
 #\u65e5\u5fd7\u76ee\u5f55
 logging.path=/usr/sncp/logs/micro
+
+#metrics
+spring.application.name=fcm-dubbo
+info.info=\u9632\u6c89\u8ff7api\u4e1a\u52a1
+info.version=@pom.version@
+info.build.artifact=@project.artifactId@
+info.build.name=@project.name@
+info.build.description=@project.description@
+info.build.version=@project.version@
+cbss.api.errorcode.bis.basename=errorcode_zh_CN
+cbss.api.forbiLog.conf.forbiMethodInfos=processSubmit,mergeFranchiseeInfo,mobileRegisterPassport,registerPassport,registerPassport,regPassportBind,regPassportBind,validatePassport,queryEps,queryUserEps,updateEps,updateEpsByChType,updateEpsByUserId,updateEpsByUserIdAndChType,checkPassport,sendMobileSmsCode,sendMobileCode,mobileCodeAuth,mobileAuth,mobileRegisterPassport,registerPassport,sendMobileActiveKey,sendAppointmentSms,mobileCodeAuth,mobileAuth,imprestPropCard,registerPassport,checkPassport,exeProcWithJson,registerPassport,regPassport,regPassportBind,sdoMobileRegisterPassport,sdoRegisterPassport,checkPassport,register.json,register_check.json,vapi,changepassword,resetpasswordemail,resetpasswordsms,sendmobilecode,useCard,checkPassportOther,saveCompleteInfo,checkPassport
+cbss.api.forbiLog.conf.forbiAttrInfos=password,commitpassword,cipher,secAns,secQes,answner,commitnewpassword
+cbss.api.forbiLog.conf.forbiKeys=org.springframework,encodingFilter.FILTERED
+cbss.api.forbiLog.conf.newlinereplces=threePartnerImprest
+cbss.api.threadpool.conf.corePoolSize=10
+cbss.api.threadpool.conf.maximumPoolSize=10
+cbss.api.threadpool.conf.keepAliveTime=60000
+cbss.api.threadpool.conf.blockingQueueNum=50
+cbss.api.application.heart.conf.metricUrl=http://monitor.yunwei.woniu.com:81/api/push_monitor/
+cbss.api.application.heart.conf.metricType=sncp.mirco.heart
+cbss.api.application.heart.conf.tags=desc=@project.description@,version=@project.version@
+security.ignored=/cbss/api/**
+security.user.name=cbssapi
+security.user.password=ID)!DFASDPOI!@#
+management.context-path=/management
+management.addApplicationContextHeader=false
+spring.boot.admin.url=http://console.micro.woniu.com/
+spring.boot.admin.client.prefer-ip=true
