--- a/sncp-service/sncp-passport/passport-dubbo/pom.xml
+++ b/sncp-service/sncp-passport/passport-dubbo/pom.xml
@@ -3,6 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>passport-dubbo</artifactId>
 	<packaging>jar</packaging>
+	<description>Microservice Passport</description>
 
 	<parent>
 		<groupId>com.woniu.sncp</groupId>
