修改服务器参数

--- a/sncp-service/sncp-passport/passport-dubbo/src/main/resources/bootstrap-dev.yml
+++ b/sncp-service/sncp-passport/passport-dubbo/src/main/resources/bootstrap-dev.yml
@@ -67,7 +67,7 @@ cbss:
           tags: desc=passport-dubbo,version='@project.version@'
 
 security: 
-  ignored: /cbss/api/**
+  ignored:  /cbss/api/**,/passport/**
   user: 
     name: cbssapi
     password: ID)!DFASDPOI!@#
