添加redis缓存查询功能

--- a/sncp-service/sncp-passport/passport-dubbo/src/main/resources/application.yml
+++ b/sncp-service/sncp-passport/passport-dubbo/src/main/resources/application.yml
@@ -5,3 +5,8 @@ info:
     description: @project.description@
     version: @project.version@
   version: @project.version@
+  
+management: 
+  health: 
+    redis: 
+      enabled: false
