--- a/sncp-service/sncp-passport/passport-dubbo/src/main/resources/bootstrap-dev.yml
+++ b/sncp-service/sncp-passport/passport-dubbo/src/main/resources/bootstrap-dev.yml
@@ -80,3 +80,9 @@ spring:
   boot: 
     admin: 
       url: http://10.103.4.137:2000
+  redis: 
+    cluster: 
+      nodes: 10.106.0.199:7000,10.106.0.199:7001,10.106.0.199:7002
+      maxTotal: 50
+      minIdle: 10
+      maxWaitMillis: 2000
