--- a/sncp-service/pom.xml
+++ b/sncp-service/pom.xml
@@ -23,6 +23,7 @@
 		<spring.cluod.version>Brixton.RELEASE</spring.cluod.version>
 		<spring.boot.admin.client.version>1.3.2</spring.boot.admin.client.version>
 		<woniu.cbss.init.version>0.0.1</woniu.cbss.init.version>
+		<jpa.persistence.version>2.1.1</jpa.persistence.version>
 	</properties>
 
 	<modules>
