--- a/sncp-service/sncp-passport/passport-dubbo/pom.xml
+++ b/sncp-service/sncp-passport/passport-dubbo/pom.xml
@@ -18,6 +18,30 @@
 			<version>${spring.boot.admin.client.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-redis</artifactId>
+			<exclusions>
+				<exclusion>
+					<artifactId>spring-data-redis</artifactId>
+					<groupId>org.springframework.data</groupId>
+				</exclusion>
+				<exclusion>
+					<artifactId>jedis</artifactId>
+					<groupId>redis.clients</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
+			<version>1.7.1.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.8.1</version>
+		</dependency>
+		<dependency>
 			<groupId>com.woniu.cbss</groupId>
 			<artifactId>cbss.api.init</artifactId>
 			<version>${woniu.cbss.init.version}</version>
@@ -27,6 +51,11 @@
 		<dependency>
 			<groupId>com.woniu.sncp</groupId>
 			<artifactId>passport-api</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.woniu.sncp</groupId>
+			<artifactId>passport-jpa</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
