--- a/sncp-service/sncp-passport/passport-jpa/pom.xml
+++ b/sncp-service/sncp-passport/passport-jpa/pom.xml
@@ -1,13 +1,22 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>passport-jpa</artifactId>
 	<packaging>jar</packaging>
-	
+
 	<parent>
 		<groupId>com.woniu.sncp</groupId>
 		<artifactId>sncp-passport</artifactId>
 		<version>1.0.4-SNAPSHOT</version>
 	</parent>
+
+	<dependencies>
+		<dependency>
+			<groupId>org.eclipse.persistence</groupId>
+			<artifactId>javax.persistence</artifactId>
+			<version>${jpa.persistence.version}</version>
+		</dependency>
+	</dependencies>
 
 
 </project>
