修改redis获取信息

--- a/sncp-cbss/cbss.business/version.1.0.0/api.fcm/trunk/src/main/resources/application-dev.properties
+++ b/sncp-cbss/cbss.business/version.1.0.0/api.fcm/trunk/src/main/resources/application-dev.properties
@@ -14,9 +14,9 @@ server.compression.mimeTypes=application/json
 server.compression.excludedUserAgents=
 server.compression.minResponseSize=2
 
-server.tomcat.maxThreads=1000
-server.tomcat.minSpareThreads=500
-server.tomcat.backgroundProcessorDelay=5
+server.tomcat.max-threads=2000
+server.tomcat.min-spare-threads=1000
+server.tomcat.background-processor-delay=5
 server.tomcat.accesslog.enabled=true
 server.tomcat.uriEncoding=utf-8
 accesslog.directory=/usr/sncp/logs/micro/cbssapi/${server.port}/accesslog/
