添加db连接检查

--- a/sncp-service/sncp-profile/profile-dubbo/src/main/resources/application-dev.properties
+++ b/sncp-service/sncp-profile/profile-dubbo/src/main/resources/application-dev.properties
@@ -5,6 +5,8 @@ spring.datasource.url=jdbc:mysql://10.17.0.4:3306/SN_PROFILE?characterEncoding=U
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.hibernate.naming_strategy=com.woniu.sncp.profile.strategy.MysqlUpperCaseStrategy  
+
 # Number of ms to wait before throwing an exception if no connection is available.
 spring.datasource.tomcat.max-wait=3000
 # Maximum number of active connections that can be allocated from this pool at the same time.
@@ -17,7 +19,7 @@ spring.datasource.tomcat.test-on-borrow=true
 #spring.datasource.hikari.cachePrepStmts=true
 #spring.datasource.hikari.prepStmtCacheSize=250
 #spring.datasource.hikari.prepStmtCacheSqlLimit=2048
-#spring.jpa.hibernate.naming_strategy=com.woniu.sncp.profile.strategy.MysqlUpperCaseStrategy  
+
 
 #metrics
 cbss.api.application.heart.conf.metricUrl=http://124.202.142.136:81/api/push_monitor/
