手机下载管理配置查询接口

--- a/sncp-cbss/cbss.business/version.1.0.0/api.appMembers/trunk/src/main/resources/application-prod.properties
+++ b/sncp-cbss/cbss.business/version.1.0.0/api.appMembers/trunk/src/main/resources/application-prod.properties
@@ -71,6 +71,7 @@ cbss.api.forbiLog.conf.forbiAttrInfos=password,commitpassword,cipher,secAns,secQ
 cbss.api.forbiLog.conf.forbiKeys=org.springframework,encodingFilter.FILTERED
 cbss.api.forbiLog.conf.newlinereplces=threePartnerImprest
 
+cbss.api.properties.url=http://10.17.0.23:91/ico
 
 cbss.api.threadpool.conf.corePoolSize=10
 cbss.api.threadpool.conf.maximumPoolSize=10
