--- a/sncp-cbss/cbss.business/version.1.0.0/api.nciic/trunk/src/main/resources/application-prod.properties
+++ b/sncp-cbss/cbss.business/version.1.0.0/api.nciic/trunk/src/main/resources/application-prod.properties
@@ -21,7 +21,7 @@ spring.boot.admin.url=http://192.168.95.143:10000/
 
 management.health.redis.enabled=false
 
-errorcode.bis.basename=errorcode_zh_CN
+cbss.api.errorcode.bis.basename=errorcode_zh_CN
 
 cbss.api.redis.cluster.nodes=192.168.94.11:7001,192.168.94.12:7002,192.168.94.13:7003
 cbss.api.redis.cluster.timeout=30000
