--- a/sncp-cbss/cbss.business/version.1.0.0/api.nciic/trunk/src/main/resources/application.properties
+++ b/sncp-cbss/cbss.business/version.1.0.0/api.nciic/trunk/src/main/resources/application.properties
@@ -21,7 +21,8 @@ spring.boot.admin.url=http://127.0.0.1:8886/
 
 management.health.redis.enabled=false
 
-errorcode.bis.basename=errorcode_zh_CN
+
+cbss.api.errorcode.bis.basename=errorcode_zh_CN
 
 cbss.api.redis.cluster.nodes=10.106.0.199:7000,10.106.0.199:7001,10.106.0.199:7002
 cbss.api.redis.cluster.timeout=30000
@@ -40,5 +41,11 @@ cbss.api.forbiLog.conf.forbiKeys=org.springframework,encodingFilter.FILTERED
 cbss.api.forbiLog.conf.newlinereplces=threePartnerImprest
 
 
-cbss.api.access.request.urls[0]=/cbss/api/nciic/deliver
-cbss.api.access.request.paramTypes[0]=cbss.api.nciic.controller.NciicRequestDatas
+cbss.api.threadpool.conf.corePoolSize=10
+cbss.api.threadpool.conf.maximumPoolSize=10
+cbss.api.threadpool.conf.keepAliveTime=60000
+cbss.api.threadpool.conf.blockingQueueNum=50
+
+cbss.api.access.request.services[0]=com.woniu.sncp.cbss.api.nciic.controller.NciicNiftyService
+cbss.api.access.request.methods[0]=invoke
+cbss.api.access.request.requestparams[0]=com.woniu.sncp.cbss.api.nciic.controller.NciicRequestParam
