--- a/sncp-cbss/cbss.business/version.1.0.0/api.init/trunk/pom.xml
+++ b/sncp-cbss/cbss.business/version.1.0.0/api.init/trunk/pom.xml
@@ -19,6 +19,11 @@
 	<dependencies>
 
 		<dependency>
+			<groupId>com.woniu.sncp</groupId>
+			<artifactId>nifty-spring-boot-starter</artifactId>
+			<version>0.0.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
@@ -56,7 +61,10 @@
 			<artifactId>json-simple</artifactId>
 			<optional>false</optional>
 		</dependency>
-
+		<dependency>
+			<groupId>com.woniu.cbss</groupId>
+			<artifactId>cbss.core.authorize</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>com.woniu.cbss</groupId>
 			<artifactId>cbss.core.errorcode</artifactId>
