--- a/sncp-cbss/cbss.business/version.1.0.0/api.nciic/trunk/src/main/resources/application-dev.properties
+++ b/sncp-cbss/cbss.business/version.1.0.0/api.nciic/trunk/src/main/resources/application-dev.properties
@@ -21,7 +21,8 @@ spring.boot.admin.url=http://10.103.4.137:2000/
 
 management.health.redis.enabled=false
 
-errorcode.bis.basename=errorcode_zh_CN
+
+cbss.api.errorcode.bis.basename=errorcode_zh_CN
 
 cbss.api.redis.cluster.nodes=10.106.0.199:7000,10.106.0.199:7001,10.106.0.199:7002
 cbss.api.redis.cluster.timeout=30000
