--- a/sncp-cbss/cbss.core/pom.xml
+++ b/sncp-cbss/cbss.core/pom.xml
@@ -24,5 +24,8 @@
 		<module>cbss.call/trunk</module>
 		<module>cbss.repository/trunk</module>
 		<module>cbss.authorize/trunk</module>
+		
+		<module>nifty-spring-boot-starter</module>
+		<module>cbss.thrift/trunk</module>
 	</modules>
 </project>
