服务端运行在linux代码提交

--- a/sncp-cbss/cbss.business/version.1.0.0/api.nciic/trunk/src/main/resources/application.properties
+++ b/sncp-cbss/cbss.business/version.1.0.0/api.nciic/trunk/src/main/resources/application.properties
@@ -12,6 +12,7 @@ spring.application.name=@pom.artifactId@
 
 server.port=8888
 
+
 security.ignored=/cbss/api/**
 security.user.name=cbssapi
 security.user.password=ID)!DFASDPOI!@#
@@ -20,7 +21,7 @@ management.context-path=/management
 spring.boot.admin.url=http://127.0.0.1:8886/
 
 management.health.redis.enabled=false
-
+logging.path=/usr/sncp/logs/micro/cbssapi
 
 cbss.api.errorcode.bis.basename=errorcode_zh_CN
 
@@ -49,3 +50,5 @@ cbss.api.threadpool.conf.blockingQueueNum=50
 cbss.api.access.request.services[0]=com.woniu.sncp.cbss.api.nciic.controller.NciicNiftyService
 cbss.api.access.request.methods[0]=invoke
 cbss.api.access.request.requestparams[0]=com.woniu.sncp.cbss.api.nciic.controller.NciicRequestParam
+
+cbss.api.errorcode.bis.basename=errorcode_zh_CN
