--- a/sncp-cbss/cbss.business/version.1.0.0/api.nciic/trunk/pom.xml
+++ b/sncp-cbss/cbss.business/version.1.0.0/api.nciic/trunk/pom.xml
@@ -60,6 +60,17 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<dependency>
+			<groupId>com.101tec</groupId>
+			<artifactId>zkclient</artifactId>
+			<exclusions>
+				<exclusion>
+					<artifactId>slf4j-log4j12</artifactId>
+					<groupId>org.slf4j</groupId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 		<!-- sncp dubbo api -->
 
 		<!-- sncp cbss core -->
