--- a/sncp-cbss/cbss.business/version.1.0.0/api.nciic/trunk/src/main/resources/application-prod.properties
+++ b/sncp-cbss/cbss.business/version.1.0.0/api.nciic/trunk/src/main/resources/application-prod.properties
@@ -20,6 +20,7 @@ management.context-path=/management
 spring.boot.admin.url=http://192.168.95.143:10000/
 
 management.health.redis.enabled=false
+logging.path=/usr/sncp/logs/micro/cbssapi
 
 cbss.api.errorcode.bis.basename=errorcode_zh_CN
 
@@ -39,11 +40,8 @@ cbss.api.forbiLog.conf.forbiAttrInfos=password,commitpassword,cipher,secAns,secQ
 cbss.api.forbiLog.conf.forbiKeys=org.springframework,encodingFilter.FILTERED
 cbss.api.forbiLog.conf.newlinereplces=threePartnerImprest
 
-cbss.api.access.request.urls[0]=/cbss/api/fcm/onlinetime
-cbss.api.access.request.paramTypes[0]=cbss.api.fcm.controller.FcmRequestDatas
-cbss.api.access.request.urls[1]=/cbss/api/fcm/conf
-cbss.api.access.request.paramTypes[1]=cbss.api.fcm.controller.FcmConfRequestDatas
-cbss.api.access.request.urls[2]=/cbss/api/fcm/updateTime
-cbss.api.access.request.paramTypes[2]=cbss.api.fcm.controller.FcmTimeRequestDatas
-cbss.api.access.request.urls[3]=/cbss/api/fcm/queryTime
-cbss.api.access.request.paramTypes[3]=cbss.api.fcm.controller.FcmTimeRequestDatas
+cbss.api.access.request.services[0]=com.woniu.sncp.cbss.api.nciic.controller.NciicNiftyService
+cbss.api.access.request.methods[0]=invoke
+cbss.api.access.request.requestparams[0]=com.woniu.sncp.cbss.api.nciic.controller.NciicRequestParam
+
+cbss.api.errorcode.bis.basename=errorcode_zh_CN
