--- a/sncp-cbss/cbss.core/cbss.thrift/trunk/pom.xml
+++ b/sncp-cbss/cbss.core/cbss.thrift/trunk/pom.xml
@@ -18,7 +18,7 @@
 
 
 	<dependencies>
-	
+
 		<dependency>
 			<groupId>com.woniu.sncp</groupId>
 			<artifactId>nifty-spring-boot-starter</artifactId>
@@ -41,32 +41,32 @@
 			</resource>
 		</resources>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.thrift.tools</groupId>
-				<artifactId>maven-thrift-plugin</artifactId>
-				<version>0.1.11</version>
-				<configuration>
-					<thriftExecutable>${project.basedir}/src/main/thrift.exe</thriftExecutable>
-					<generator>java</generator>
-					<outputDirectory>${project.basedir}/src/main/java</outputDirectory>
-				</configuration>
-				<executions>
-					<execution>
-						<id>thrift-sources</id>
-						<phase>generate-sources</phase>
-						<goals>
-							<goal>compile</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>thrift-test-sources</id>
-						<phase>generate-test-sources</phase>
-						<goals>
-							<goal>testCompile</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+<!-- 			<plugin> -->
+<!-- 				<groupId>org.apache.thrift.tools</groupId> -->
+<!-- 				<artifactId>maven-thrift-plugin</artifactId> -->
+<!-- 				<version>0.1.11</version> -->
+<!-- 				<configuration> -->
+<!-- 					<thriftExecutable>${project.basedir}/src/main/thrift.exe</thriftExecutable> -->
+<!-- 					<generator>java</generator> -->
+<!-- 					<outputDirectory>${project.basedir}/src/main/java</outputDirectory> -->
+<!-- 				</configuration> -->
+<!-- 				<executions> -->
+<!-- 					<execution> -->
+<!-- 						<id>thrift-sources</id> -->
+<!-- 						<phase>generate-sources</phase> -->
+<!-- 						<goals> -->
+<!-- 							<goal>compile</goal> -->
+<!-- 						</goals> -->
+<!-- 					</execution> -->
+<!-- 					<execution> -->
+<!-- 						<id>thrift-test-sources</id> -->
+<!-- 						<phase>generate-test-sources</phase> -->
+<!-- 						<goals> -->
+<!-- 							<goal>testCompile</goal> -->
+<!-- 						</goals> -->
+<!-- 					</execution> -->
+<!-- 				</executions> -->
+<!-- 			</plugin> -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-resources-plugin</artifactId>
