--- a/sncp-cbss/cbss.core/pom.xml
+++ b/sncp-cbss/cbss.core/pom.xml
@@ -26,6 +26,7 @@
 		<module>cbss.authorize/trunk</module>
 		
 		<module>nifty-spring-boot-starter</module>
-		<module>cbss.thrift/trunk</module>
+		<module>cbss.thrift.linux/trunk</module>
+		<module>cbss.thrift.win/trunk</module>
 	</modules>
 </project>
