--- a/sncp-cbss/cbss.core/cbss.errorcode/trunk/pom.xml
+++ b/sncp-cbss/cbss.core/cbss.errorcode/trunk/pom.xml
@@ -22,7 +22,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.woniu.cbss</groupId>
-			<artifactId>cbss.core.thrift</artifactId>
+			<artifactId>cbss.core.thrift.linux</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
