调整sncp-cbss-core parent pom

--- a/sncp-cbss/cbss.core/cbss.authorize/trunk/pom.xml
+++ b/sncp-cbss/cbss.core/cbss.authorize/trunk/pom.xml
@@ -58,7 +58,7 @@
 		
 		<dependency>
 			<groupId>com.woniu.cbss</groupId>
-			<artifactId>cbss.core.thrift.linux</artifactId>
+			<artifactId>cbss.core.thrift.win</artifactId>
 		</dependency>
 	</dependencies>
 
