--- a/sncp-cbss/cbss.business/version.1.0.0/api.parent/pom.xml
+++ b/sncp-cbss/cbss.business/version.1.0.0/api.parent/pom.xml
@@ -23,16 +23,20 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<jdk.version>1.8</jdk.version>
 
+		<cbss.api.init.version>${project.version}</cbss.api.init.version>
 		<!-- sncp bss core -->
-		<cbss.api.init.version>0.0.1</cbss.api.init.version>
 		<cbss.authorize.version>0.0.1</cbss.authorize.version>
+		<cbss.util.version>0.0.1</cbss.util.version>
 		<cbss.errorcode.version>0.0.1</cbss.errorcode.version>
-		<cbss.trace.version>0.0.1</cbss.trace.version>
 		<cbss.call.version>0.0.1</cbss.call.version>
 		<cbss.model.version>0.0.1</cbss.model.version>
 		<cbss.repository.version>0.0.1</cbss.repository.version>
-		<cbss.validation.version>0.0.1</cbss.validation.version>
 		<cbss.signature.version>0.0.1</cbss.signature.version>
+		<cbss.vaildation.version>0.0.1</cbss.vaildation.version>
+		<cbss.trace.version>0.0.1</cbss.trace.version>
+		<cbss.thrift.linux.version>0.0.1</cbss.thrift.linux.version>
+		<cbss.thrift.win.version>0.0.1</cbss.thrift.win.version>
+		<nifty.spring.boot.starter.version>0.0.1</nifty.spring.boot.starter.version>
 
 		<!-- Spring -->
 		<org.springframework.spring.version>4.2.6.RELEASE</org.springframework.spring.version>
@@ -99,6 +103,12 @@
 	<dependencyManagement>
 		<dependencies>
 
+		<dependency>
+			<groupId>com.woniu.sncp</groupId>
+			<artifactId>nifty-spring-boot-starter</artifactId>
+			<version>${nifty.spring.boot.starter.version}</version>
+		</dependency>
+		
 			<dependency>
 				<groupId>redis.clients</groupId>
 				<artifactId>jedis</artifactId>
@@ -193,7 +203,7 @@
 			<dependency>
 				<groupId>com.woniu.cbss</groupId>
 				<artifactId>cbss.core.vaildation</artifactId>
-				<version>${cbss.validation.version}</version>
+				<version>${cbss.vaildation.version}</version>
 			</dependency>
 			<dependency>
 				<groupId>com.woniu.cbss</groupId>
