--- a/sncp-cbss/cbss.core/cbss.parent/pom.xml
+++ b/sncp-cbss/cbss.core/cbss.parent/pom.xml
@@ -81,21 +81,23 @@
 		<logback.version>1.1.7</logback.version>
 		<apache.curator.version>2.4.2</apache.curator.version>
 
-		<cbss.authorize.version>0.0.1</cbss.authorize.version>
-		<cbss.util.version>0.0.1</cbss.util.version>
-		<cbss.errorcode.version>0.0.1</cbss.errorcode.version>
-		<cbss.call.version>0.0.1</cbss.call.version>
-		<cbss.model.version>0.0.1</cbss.model.version>
-		<cbss.repository.version>0.0.1</cbss.repository.version>
-		<cbss.signature.version>0.0.1</cbss.signature.version>
-		<cbss.vaildation.version>0.0.1</cbss.vaildation.version>
-		<cbss.trace.version>0.0.1</cbss.trace.version>
-		<cbss.thrift.version>0.0.1</cbss.thrift.version>
+		<cbss.authorize.version>${project.version}</cbss.authorize.version>
+		<cbss.util.version>${project.version}</cbss.util.version>
+		<cbss.errorcode.version>${project.version}</cbss.errorcode.version>
+		<cbss.call.version>${project.version}</cbss.call.version>
+		<cbss.model.version>${project.version}</cbss.model.version>
+		<cbss.repository.version>${project.version}</cbss.repository.version>
+		<cbss.signature.version>${project.version}</cbss.signature.version>
+		<cbss.vaildation.version>${project.version}</cbss.vaildation.version>
+		<cbss.trace.version>${project.version}</cbss.trace.version>
+		<cbss.thrift.linux.version>${project.version}</cbss.thrift.linux.version>
+		<cbss.thrift.win.version>${project.version}</cbss.thrift.win.version>
+		
+		<nifty.version>0.18.0</nifty.version>
 		<jedis.version>2.8.1</jedis.version>
 		<brave.version>3.6.0</brave.version>
 		<flexjson.version>3.3</flexjson.version>
 		<libthrift.version>0.9.3</libthrift.version>
-		<nifty.version>0.18.0</nifty.version>
 	</properties>
 
 	<dependencyManagement>
@@ -235,8 +237,15 @@
 			<dependency>
 				<groupId>com.woniu.cbss</groupId>
 				<artifactId>cbss.core.thrift.linux</artifactId>
-				<version>${cbss.thrift.version}</version>
+				<version>${cbss.thrift.linux.version}</version>
 			</dependency>
+			
+			<dependency>
+				<groupId>com.woniu.cbss</groupId>
+				<artifactId>cbss.core.thrift.win</artifactId>
+				<version>${cbss.thrift.win.version}</version>
+			</dependency>
+			
 
 			<dependency>
 				<groupId>org.springframework</groupId>
