profile新增面值、分区、活动查询

--- a/sncp-service/sncp-profile/profile-dubbo/src/main/resources/application-dev.properties
+++ b/sncp-service/sncp-profile/profile-dubbo/src/main/resources/application-dev.properties
@@ -6,13 +6,18 @@ spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # Number of ms to wait before throwing an exception if no connection is available.
-spring.datasource.max-wait=3000
+spring.datasource.max-wait=30000
 # Maximum number of active connections that can be allocated from this pool at the same time.
 spring.datasource.max-active=50
+
+spring.datasource.max-idle= 20
+spring.datasource.min-evictable-idle-time-millis=5000
+spring.datasource.min-idle=8
+
 # Validate the connection before borrowing it from the pool.
 spring.datasource.test-on-borrow=true
 spring.jpa.hibernate.naming_strategy=com.woniu.sncp.profile.strategy.MysqlUpperCaseStrategy  
 
 #metrics
 cbss.api.application.heart.conf.metricUrl=http://124.202.142.136:81/api/push_monitor/
-spring.boot.admin.url=http://10.103.4.137:2000
+#spring.boot.admin.url=http://10.103.4.137:2000
