--- a/sncp-service/sncp-profile/pom.xml
+++ b/sncp-service/sncp-profile/pom.xml
@@ -9,18 +9,28 @@
 		<artifactId>sncp-service</artifactId>
 		<version>1.0.4-SNAPSHOT</version>
 	</parent>
+	
+	<properties>
+		<exception.version>1.0.4-SNAPSHOT</exception.version>
+		<commons.beanutils.version>1.8.3</commons.beanutils.version>
+	</properties>
 
 	<modules>
 		<module>profile-api</module>
 		<module>profile-jpa</module>
 		<module>profile-dubbo</module>
 	</modules>
-		
+	
 	<dependencies>
 		<dependency>
 			<groupId>com.woniu.sncp</groupId>
 			<artifactId>sncp-exception</artifactId>
-			<version>${project.version}</version>
+			<version>${exception.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-beanutils</groupId>
+  			<artifactId>commons-beanutils</artifactId>
+			<version>${commons.beanutils.version}</version>
 		</dependency>
 	</dependencies>
 	
