--- a/sncp-service/sncp-profile/profile-api/pom.xml
+++ b/sncp-service/sncp-profile/profile-api/pom.xml
@@ -8,12 +8,14 @@
 		<artifactId>sncp-profile</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
+	
+	
 
 	<dependencies>
 		<dependency>
 			<groupId>com.woniu.sncp</groupId>
 			<artifactId>sncp-exception</artifactId>
-			<version>${project.version}</version>
+			<version>${exception.version}</version>
 		</dependency>
 	</dependencies>
 	
