profile新增面值、分区、活动查询

--- a/sncp-cbss/cbss.business/version.1.0.0/api.profile/trunk/cbss.api.profile/src/main/resources/application.properties
+++ b/sncp-cbss/cbss.business/version.1.0.0/api.profile/trunk/cbss.api.profile/src/main/resources/application.properties
@@ -88,4 +88,4 @@ cbss.api.access.request.paramTypes[1]=com.woniu.sncp.cbss.api.profile.controller
 cbss.api.access.request.urls[2]=/cbss/api/app/imprest/value
 cbss.api.access.request.paramTypes[2]=com.woniu.sncp.cbss.api.profile.controller.CardConfRequestDatas
 cbss.api.access.request.urls[3]=/cbss/api/app/imprest/allactivity
-cbss.api.access.request.paramTypes[3]=com.woniu.sncp.cbss.api.profile.controller.ActiviyConfRequestDatas
+cbss.api.access.request.paramTypes[3]=com.woniu.sncp.cbss.api.profile.controller.ActivityConfRequestDatas
