profile新增面值、分区、活动查询

--- a/sncp-cbss/cbss.business/version.1.0.0/api.profile/trunk/cbss.api.profile/pom.xml
+++ b/sncp-cbss/cbss.business/version.1.0.0/api.profile/trunk/cbss.api.profile/pom.xml
@@ -15,9 +15,9 @@
 		<relativePath>../../api.parent/pom.xml</relativePath>
 	</parent>
 
-
-
-
+	<properties>
+		<dozer.version>5.5.1</dozer.version>
+	</properties>
 	<dependencies>
 
 		<!-- sncp bss profile api -->
@@ -121,6 +121,12 @@
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
+		</dependency>
+		
+		<dependency>
+			<groupId>net.sf.dozer</groupId>
+			<artifactId>dozer</artifactId>
+			<version>${dozer.version}</version>
 		</dependency>
 		
 	</dependencies>
